fixed hero overflow issue

--- a/src/styles/components/_components.work-hero.sass
+++ b/src/styles/components/_components.work-hero.sass
@@ -15,4 +15,5 @@
 
 .c-work-hero__content
   z-index: 2
+  margin: 0 auto
   margin-top: -3rem
